[gd_scene load_steps=48 format=2]

[ext_resource path="res://Fonts/m5x7.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://textures/GRIB_ATAKYET.png" type="Texture" id=2]
[ext_resource path="res://worlds_list.gd" type="Script" id=3]
[ext_resource path="res://menu.gd" type="Script" id=4]
[ext_resource path="res://textures/gui/menu_bg.png" type="Texture" id=5]
[ext_resource path="res://Fonts/FFFFORWA.TTF" type="DynamicFontData" id=6]
[ext_resource path="res://textures/gui/name_edit.png" type="Texture" id=7]
[ext_resource path="res://textures/mode-menu_bg.png" type="Texture" id=8]
[ext_resource path="res://textures/mode_survival.png" type="Texture" id=9]
[ext_resource path="res://textures/mode_survival_mause.png" type="Texture" id=10]
[ext_resource path="res://textures/mode_survival_clicked.png" type="Texture" id=11]
[ext_resource path="res://Fonts/small_pixel.ttf" type="DynamicFontData" id=12]
[ext_resource path="res://Dpix_8pt.ttf" type="DynamicFontData" id=13]
[ext_resource path="res://textures/gui/backgraundbutton_play.png" type="Texture" id=14]
[ext_resource path="res://buttons.gd" type="Script" id=15]
[ext_resource path="res://textures/gui/multiplayericon.png" type="Texture" id=16]
[ext_resource path="res://textures/gui/addicon.png" type="Texture" id=17]
[ext_resource path="res://textures/gui/playicon.png" type="Texture" id=18]
[ext_resource path="res://textures/gui/musoricon.png" type="Texture" id=19]
[ext_resource path="res://textures/gui/settingsworldicon.png" type="Texture" id=20]
[ext_resource path="res://gui/worldtoolsdes.tres" type="StyleBox" id=21]
[ext_resource path="res://gui/worldtoolsdes_pressed.tres" type="StyleBox" id=22]
[ext_resource path="res://gui/worldtoolsdes_hover.tres" type="StyleBox" id=23]
[ext_resource path="res://textures/gui/backicon.png" type="Texture" id=24]
[ext_resource path="res://textures/gui/localworldsicon.png" type="Texture" id=25]

[sub_resource type="ParticlesMaterial" id=1]
lifetime_randomness = 1.0
emission_shape = 1
emission_sphere_radius = 104.99
flag_align_y = true
flag_rotate_y = true
flag_disable_z = true
direction = Vector3( 200, 0, 0 )
spread = 119.25
flatness = 0.68
gravity = Vector3( 0, -98, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale_random = 0.46
color = Color( 0.956863, 0.831373, 0.254902, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 0.439216 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 10
font_data = ExtResource( 13 )

[sub_resource type="StyleBoxEmpty" id=21]

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxFlat" id=22]
bg_color = Color( 0.129412, 0.0666667, 0.2, 1 )
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
anti_aliasing = false

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.886275, 0.886275, 0.886275, 1 )

[sub_resource type="StyleBoxFlat" id=12]
draw_center = false
border_width_right = 10
border_color = Color( 0.431373, 0.431373, 0.431373, 1 )

[sub_resource type="StyleBoxEmpty" id=13]

[sub_resource type="Theme" id=14]
VScrollBar/icons/decrement = null
VScrollBar/icons/decrement_highlight = null
VScrollBar/icons/increment = null
VScrollBar/icons/increment_highlight = null
VScrollBar/styles/grabber = SubResource( 11 )
VScrollBar/styles/grabber_highlight = SubResource( 11 )
VScrollBar/styles/grabber_pressed = SubResource( 11 )
VScrollBar/styles/scroll = SubResource( 12 )
VScrollBar/styles/scroll_focus = SubResource( 13 )

[sub_resource type="DynamicFont" id=15]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 12 )

[sub_resource type="StyleBoxEmpty" id=16]

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 0.537255, 0.356863, 0.0705882, 1 )
border_width_top = 5
border_color = Color( 0.341176, 0.215686, 0.00392157, 1 )
expand_margin_top = 5.0

[sub_resource type="DynamicFont" id=18]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=19]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=20]
font_data = ExtResource( 1 )

[node name="menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bg" type="TextureRect" parent="."]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 5 )
expand = true
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Particles2D" type="Particles2D" parent="."]
position = Vector2( 320, 280 )
scale = Vector2( -1.15821, 0.756622 )
lifetime = 7.64
process_material = SubResource( 1 )

[node name="menu_1" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true
}

[node name="title" type="TextureRect" parent="menu_1"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -320.0
margin_right = -8.0
margin_bottom = 64.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="buttons" type="VBoxContainer" parent="menu_1"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -158.0
custom_constants/separation = 0
script = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="play" type="TextureButton" parent="menu_1/buttons"]
margin_right = 158.0
margin_bottom = 113.0
size_flags_vertical = 3
texture_normal = ExtResource( 14 )
texture_pressed = ExtResource( 14 )
expand = true
stretch_mode = 6

[node name="Label" type="Label" parent="menu_1/buttons/play"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -13.0
custom_styles/normal = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
text = "PLAY"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="settings" type="Button" parent="menu_1/buttons"]
margin_top = 113.0
margin_right = 158.0
margin_bottom = 226.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 4 )
disabled = true
text = "settings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="quit" type="Button" parent="menu_1/buttons"]
margin_top = 226.0
margin_right = 158.0
margin_bottom = 340.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 4 )
text = "quit game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -17.0
margin_right = 154.0
custom_fonts/font = SubResource( 5 )
text = "Version: дима карнаул"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="worlds_list" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="worlds_list"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="worlds_list"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="worlds_list/VBoxContainer"]
margin_right = 640.0
margin_bottom = 48.0
custom_constants/separation = 0

[node name="back" type="Button" parent="worlds_list/VBoxContainer/HBoxContainer"]
margin_right = 100.0
margin_bottom = 48.0
rect_min_size = Vector2( 100, 48 )
custom_styles/hover = ExtResource( 21 )
custom_styles/pressed = ExtResource( 22 )
custom_styles/focus = SubResource( 21 )
custom_styles/normal = ExtResource( 21 )
custom_fonts/font = SubResource( 6 )
text = "back"
icon = ExtResource( 24 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="multiplayer2" type="Button" parent="worlds_list/VBoxContainer/HBoxContainer"]
margin_left = 100.0
margin_right = 370.0
margin_bottom = 48.0
rect_min_size = Vector2( 0, 48 )
size_flags_horizontal = 3
custom_styles/hover = ExtResource( 21 )
custom_styles/pressed = ExtResource( 22 )
custom_styles/focus = SubResource( 21 )
custom_styles/disabled = SubResource( 22 )
custom_styles/normal = ExtResource( 21 )
custom_fonts/font = SubResource( 6 )
text = "local games"
icon = ExtResource( 25 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="multiplayer" type="Button" parent="worlds_list/VBoxContainer/HBoxContainer"]
margin_left = 370.0
margin_right = 640.0
margin_bottom = 48.0
rect_min_size = Vector2( 0, 48 )
size_flags_horizontal = 3
custom_styles/hover = ExtResource( 21 )
custom_styles/pressed = ExtResource( 22 )
custom_styles/focus = SubResource( 21 )
custom_styles/disabled = SubResource( 22 )
custom_styles/normal = ExtResource( 21 )
custom_fonts/font = SubResource( 6 )
disabled = true
text = "multiplayer"
icon = ExtResource( 16 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="worlds_list/VBoxContainer"]
margin_top = 48.0
margin_right = 640.0
margin_bottom = 53.0
rect_min_size = Vector2( 0, 5 )

[node name="HBoxContainer2" type="HBoxContainer" parent="worlds_list/VBoxContainer"]
margin_top = 53.0
margin_right = 640.0
margin_bottom = 340.0
size_flags_vertical = 3

[node name="HBoxContainer" type="VBoxContainer" parent="worlds_list/VBoxContainer/HBoxContainer2"]
margin_right = 50.0
margin_bottom = 287.0
rect_min_size = Vector2( 50, 0 )
custom_constants/separation = 0

[node name="join" type="Button" parent="worlds_list/VBoxContainer/HBoxContainer2/HBoxContainer"]
margin_right = 50.0
margin_bottom = 71.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = ExtResource( 23 )
custom_styles/pressed = ExtResource( 22 )
custom_styles/focus = SubResource( 7 )
custom_styles/normal = ExtResource( 21 )
icon = ExtResource( 18 )
expand_icon = true

[node name="remove" type="Button" parent="worlds_list/VBoxContainer/HBoxContainer2/HBoxContainer"]
margin_top = 71.0
margin_right = 50.0
margin_bottom = 143.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = ExtResource( 23 )
custom_styles/pressed = ExtResource( 22 )
custom_styles/focus = SubResource( 8 )
custom_styles/normal = ExtResource( 21 )
icon = ExtResource( 19 )
expand_icon = true

[node name="settingsworld" type="Button" parent="worlds_list/VBoxContainer/HBoxContainer2/HBoxContainer"]
modulate = Color( 0.596078, 0.596078, 0.596078, 1 )
margin_top = 143.0
margin_right = 50.0
margin_bottom = 215.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = ExtResource( 23 )
custom_styles/pressed = ExtResource( 22 )
custom_styles/focus = SubResource( 9 )
custom_styles/normal = ExtResource( 21 )
icon = ExtResource( 20 )
expand_icon = true

[node name="create" type="Button" parent="worlds_list/VBoxContainer/HBoxContainer2/HBoxContainer"]
margin_top = 215.0
margin_right = 50.0
margin_bottom = 287.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = ExtResource( 23 )
custom_styles/pressed = ExtResource( 22 )
custom_styles/focus = SubResource( 10 )
custom_styles/normal = ExtResource( 21 )
icon = ExtResource( 17 )
expand_icon = true

[node name="container" type="ScrollContainer" parent="worlds_list/VBoxContainer/HBoxContainer2"]
margin_left = 54.0
margin_right = 640.0
margin_bottom = 287.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 14 )
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="worlds_list/VBoxContainer/HBoxContainer2/container"]
margin_right = 586.0
margin_bottom = 287.0
rect_min_size = Vector2( 0, 200 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ColorRect" type="ColorRect" parent="worlds_list"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.301961 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mode_select" type="CenterContainer" parent="worlds_list/ColorRect"]
visible = false
anchor_left = 0.0015625
anchor_right = 1.00156
anchor_bottom = 1.0
margin_bottom = -4.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bg" type="TextureRect" parent="worlds_list/ColorRect/mode_select"]
margin_left = 169.0
margin_top = 18.0
margin_right = 469.0
margin_bottom = 318.0
rect_min_size = Vector2( 300, 300 )
texture = ExtResource( 8 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="worlds_list/ColorRect/mode_select/bg"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 11
custom_constants/margin_top = 8
custom_constants/margin_left = 11
custom_constants/margin_bottom = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Modes" type="VBoxContainer" parent="worlds_list/ColorRect/mode_select/bg/MarginContainer"]
margin_left = 11.0
margin_top = 8.0
margin_right = 289.0
margin_bottom = 292.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="survival_mode" type="TextureButton" parent="worlds_list/ColorRect/mode_select/bg/MarginContainer/Modes"]
margin_right = 278.0
margin_bottom = 65.0
rect_min_size = Vector2( 0, 65 )
size_flags_horizontal = 3
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 11 )
texture_hover = ExtResource( 10 )
expand = true
stretch_mode = 5

[node name="Label" type="Label" parent="worlds_list/ColorRect/mode_select/bg/MarginContainer/Modes/survival_mode"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 15 )
text = "survival mode"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="write_name" type="CenterContainer" parent="worlds_list/ColorRect"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bg" type="TextureRect" parent="worlds_list/ColorRect/write_name"]
margin_left = 220.0
margin_top = 70.0
margin_right = 420.0
margin_bottom = 270.0
rect_min_size = Vector2( 200, 200 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 7 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": true
}

[node name="name_edit" type="LineEdit" parent="worlds_list/ColorRect/write_name/bg"]
anchor_left = 0.105
anchor_top = 0.47
anchor_right = 0.9
anchor_bottom = 0.56
custom_styles/focus = SubResource( 16 )
custom_styles/normal = SubResource( 17 )
custom_fonts/font = SubResource( 18 )
placeholder_text = "world_name"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Button" type="Button" parent="worlds_list/ColorRect/write_name/bg"]
anchor_left = 0.375
anchor_top = 0.575
anchor_right = 0.64
anchor_bottom = 0.67
custom_fonts/font = SubResource( 19 )
text = "ok"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="worlds_list/ColorRect/write_name/bg"]
anchor_left = 0.175
anchor_top = 0.3
anchor_right = 0.825
anchor_bottom = 0.42
margin_bottom = -3.8147e-06
custom_fonts/font = SubResource( 20 )
text = "Write world name"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[connection signal="pressed" from="menu_1/buttons/play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="menu_1/buttons/quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="worlds_list/VBoxContainer/HBoxContainer/back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="worlds_list/VBoxContainer/HBoxContainer2/HBoxContainer/join" to="worlds_list" method="_on_join_pressed"]
[connection signal="pressed" from="worlds_list/VBoxContainer/HBoxContainer2/HBoxContainer/remove" to="worlds_list" method="_on_remove_pressed"]
[connection signal="pressed" from="worlds_list/VBoxContainer/HBoxContainer2/HBoxContainer/create" to="worlds_list" method="_on_create_pressed"]
[connection signal="pressed" from="worlds_list/ColorRect/mode_select/bg/MarginContainer/Modes/survival_mode" to="worlds_list" method="_on_Sorvival_mode_pressed"]
[connection signal="pressed" from="worlds_list/ColorRect/write_name/bg/Button" to="worlds_list" method="_on_Button_pressed"]
